--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
             <h4 class="mt-4 mb-2" data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'>Stories - MP4 </h4>
             <p data-zanim-xs='{"delay":0.3,"animation":"slide-right"}'>Produção de videos para instagram para promoção
               de pratos e eventos da casa.</p>
-            <div data-zanim-xs='{"delay":0.4,"animation":"slide-right"}'><a class="nav-link" href="stories.html"
+            <div data-zanim-xs='{"delay":0.4,"animation":"slide-right"}'><a class="nav-link" href="#"
                 target="_blank"><button type="button" class="btn btn-outline-light"
                   style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Visualizar</button></a>
               </li>
