--- a/stories.html
+++ b/stories.html
@@ -94,42 +94,42 @@
 
 
             <div class="video">
-              <video poster="assets/img/stories/caldos.webp">
+              <video controls poster="assets/img/stories/caldos.webp">
                 <source src="assets/img/stories/caldos2_1.mp4"></source>
             </div>
 
             <div class="video">
-              <video poster="assets/img/stories/27-09 2.webp">
+              <video controls poster="assets/img/stories/27-09 2.webp">
                 <source src="assets/img/stories/27-09 sertanejo.mp4"></source>
             </div>
 
             <div class="video">
-              <video poster="assets/img/stories/abertos.webp">
+              <video controls poster="assets/img/stories/abertos.webp">
                 <source src="assets/img/stories/estamos-aberto-2.mp4"></source>
             </div>
 
             <div class="video">
-              <video poster="assets/img/stories/moqueca.webp">
+              <video controls poster="assets/img/stories/moqueca.webp">
                 <source src="assets/img/stories/moqueca-394.mp4"></source>
             </div>
 
             <div class="video">
-              <video poster="assets/img/stories/mesap2.webp">
+              <video controls poster="assets/img/stories/mesap2.webp">
                 <source src="assets/img/stories/mesa-p2.mp4"></source>
             </div>
 
             <div class="video">
-              <video poster="assets/img/stories/salmaoabelle.webp">
+              <video controls poster="assets/img/stories/salmaoabelle.webp">
                 <source src="assets/img/stories/salmão-a-belle.mp4"></source>
             </div>
 
             <div class="video">
-              <video poster="assets/img/stories/ofertap2.webp">
+              <video controls poster="assets/img/stories/ofertap2.webp">
                 <source src="assets/img/stories/oferta-p2.mp4"></source>
             </div>
 
             <div class="video">
-              <video poster="assets/img/stories/opcoes.webp">
+              <video controls poster="assets/img/stories/opcoes.webp">
                 <source src="assets/img/stories/opçõesjantarVet_1.mp4"></source>
             </div>
             
@@ -165,7 +165,7 @@
   <script src="assets/js/main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-  <script src="assets/js/popup.js"></script>
+  <script src="assets/js/xpopup.js"></script>
   <script src="assets/js/script.js"></script>
 
 </body>
