--- a/stories.html
+++ b/stories.html
@@ -62,8 +62,7 @@
         <p>
           Projeto consiste em criação de video para apresentação de pratos, produtos e eventos do restaurante para o instagram.
         </p>
-        <p>Lembrando que se esses videos não tem valor e nem prazo vigente, pois se trata de material para apresentação
-          de portFólio</p>
+        <p>Lembrando que se esses videos não tem valor e nem prazo vigente, pois se trata de material para apresentação do portFólio</p>
         <p></p>
 
         <div data-zanim-xs='{"delay":0.4,"animation":"slide-right"}'>
