--- a/stories.html
+++ b/stories.html
@@ -61,10 +61,11 @@
           do portFólio</p>
         <p></p>
 
-        <div data-zanim-xs='{"delay":0.4,"animation":"slide-right"}'>
-          <a class="nav-link" href="index.html#portifolio"><button type="button" class="btn btn-outline-light"
-              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .25rem;">Voltar</button></a>
+        <div data-zanim-xs='{"delay":0.4,"animation":"slide-right"}'><a class="nav-link"
+            href="index.html#portifolio"><button type="button" class="btn btn-outline-light"
+              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Voltar</button></a>
           </li>
+          <hr>
         </div>
 
         <hr>
