--- a/stories.html
+++ b/stories.html
@@ -56,7 +56,7 @@
             </ul>
 
             <p>
-              Projeto consiste em criação de video para apresentação de pratos e produtos do restaurante para alimentar o sistema que é integrado em toda a rede pela internet e em alguns elevadores que tinha contrato para propaganda.
+              Projeto consiste em criação de video para apresentação de pratos e produtos do restaurante para alimentar o instagram.
             </p>
             <p>Lembrando que se esses videos não tem valor e nem prazo vigente, pois se trata de material para apresentação de portFólio</p>
             <p></p>
