--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me2.webp" class="img-fluid" alt="Rubens S. Freitas">
+          <img src="assets/img/me2.webp" class="img-fluid" alt="Rubens Freitas">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Especialista em Suporte de TI, Design Gráfico e Desenvolvimento Web | WordPress | Front-end | UX/UI |
