--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <a href="https://twitter.com/ruubenns" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="https://www.facebook.com/rubens.suporte" target="_blank" class="facebook"><i
             class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/ruubenns/" target="_blank" class="instagram"><i
+        <a href="https://www.instagram.com/__rubenns" target="_blank" class="instagram"><i
             class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/rubens-freitas-97640335/" target="_blank" class="linkedin"><i
+        <a href="https://www.linkedin.com/in/ruubenns" target="_blank" class="linkedin"><i
             class="bi bi-linkedin"></i></a>
         <a href="https://github.com/rubenssfreitas" target="_blank" class="bi-github"></i></a>
         <a href="https://www.behance.net/gallery/82323671/Rubens-Freitas" target="_blank" class="bi-behance"></i></a>
