--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
       <div class="section-title">
         <h2>Resumo</h2>
         <p>Confira meu Currículo</p>
-        <p>Profissional com mais de 20 anos de experiência em Suporte Técnico em TI, com sólida atuação no atendimento a usuários, manutenção de sistemas, redes e infraestrutura. Especialista em diagnósticos e resolução de problemas técnicos, com foco em agilidade, comunicação clara e excelência no atendimento. Experiência com sistemas como SAP Business One, além de conhecimentos em design gráfico, front-end e WordPress, agregando valor ao suporte prestado.</p>
+        <h5>Profissional com mais de 20 anos de experiência em Suporte Técnico em TI, com sólida atuação no atendimento a usuários, manutenção de sistemas, redes e infraestrutura. Especialista em diagnósticos e resolução de problemas técnicos, com foco em agilidade, comunicação clara e excelência no atendimento. Experiência com sistemas como SAP Business One, além de conhecimentos em design gráfico, front-end e WordPress, agregando valor ao suporte prestado.</h5>
       </div>
 
       
