--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             Marketing Digital. Desenvolvedor Fullstack em formação, Atuo com suporte técnico, criação de sites, desenvolvimento front-end e design de interfaces que equilibram funcionalidade, estética e performance.
 
             <br>
-            Tenho expertise em WordPress, HTML, CSS, JavaScript, UX/UI, Photoshop, Illustrator, e ferramentas de
+            Tenho expertise em WordPress, HTML, CSS, JavaScript, UX/UI, Photoshop, Illustrator, Figma e ferramentas de
             automação de marketing e gestão de tráfego pago.
 
             <br>
@@ -149,10 +149,10 @@
 
           <p>
           <ul>
-            <li><strong>Tecnologias Web:</strong> HTML, CSS, JavaScript, WordPress, Materialize</li>
-            <li><strong>Design:</strong> Photoshop, Illustrator, After Effects</li>
-            <li><strong>Ferramentas:</strong> Git, Elementor, Power BI (iniciante)</li>
-            <li><strong> Soft Skills: </strong> Proatividade, Comunicação, Trabalho em Equipe</li>
+            <li><strong>Tecnologias Web:</strong> HTML, CSS, JavaScript, WordPress e Materialize</li>
+            <li><strong>Design:</strong> Photoshop, Illustrator, Figma e After Effects</li>
+            <li><strong>Ferramentas:</strong> Git, Elementor e Power BI (iniciante)</li>
+            <li><strong> Soft Skills: </strong> Proatividade, Comunicação e Trabalho em Equipe</li>
           </ul>
           </p>
 
@@ -224,7 +224,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-store-line" style="color: #ffbb2c;"></i>
+            <i class="bi bi-cart3" style="color: #ffbb2c;"></i>
             <h3>E-commerce</h3>
           </div>
         </div>
@@ -236,13 +236,13 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
+            <i class="bi bi-film" style="color: #e80368;"></i>            
             <h3>Edição de Vídeo</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
+            <i class="bi bi-mouse2" style="color: #e361ff;"></i>
             <h3>Design Gráfico</h3>
           </div>
         </div>
@@ -272,7 +272,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-anchor-line" style="color: #b2904f;"></i>
+            <i class="bi bi-filetype-js" style="color: #b2904f;"></i>
             <h3>React.js</h3>
           </div>
         </div>
@@ -284,7 +284,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-base-station-line" style="color: #ff5828;"></i>
+            <i class="bi bi-person-video3" style="color: #ff5828;"></i>
             <h3>Experiência do Usuário</h3>
           </div>
         </div>
