--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 
 
 
-      <h2>Sou Programador Web <strong style="font-weight: 900;" >Desenvolvedor Fullstack em formação</strong></h2>
+      <h2>Sou Programador Web<h2> 
+        <h6><strong style="font-weight: 900;" >Desenvolvedor Fullstack em formação</strong></h6>
 
       <nav id="navbar" class="navbar">
         <ul>
