--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
 
-      <h2>Sou Programador Web<h2> 
+      <h2>Design Gráfico e Desenvolvimento Front-End<h2> 
         <h6><strong style="font-weight: 900;" >Desenvolvedor Fullstack em formação</strong></h6>
 
       <nav id="navbar" class="navbar">
