--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
       <div class="social-links">
-        <a href="https://twitter.com/ruubenns" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://x.com/ruubenns" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="https://www.facebook.com/rubens.suporte" target="_blank" class="facebook"><i
             class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/__rubenns" target="_blank" class="instagram"><i
@@ -701,7 +701,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>Redes Sociais</h3>
             <div class="social-links">
-              <a href="https://twitter.com/ruubenns" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.instagram.com/__rubenns" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="https://www.facebook.com/rubens.suporte" target="_blank" class="facebook"><i
                   class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/ruubenns/" target="_blank" class="instagram"><i
