--- a/index.html
+++ b/index.html
@@ -418,12 +418,8 @@
           <div class="resume-item">
             <h4>Anhanguera Educacional - Facnet</h4>
             <h5>2007 - 2010</h5>
-            <p><em>Superior de Tecnologia em Sistemas para Internet</em></p>
-            <p>Tecnólogo em Sistemas para Internet, Interface, usabilidade, redes e sistemas distribuídos, lógica
-              computacional e desenvolvimento em Java e segurança para serviços web. Projetar, desenvolver e instalar
-              bancos de dados, implementar redes internas de empresas (Intranet), configurar e instalar redes de
-              Internet, servidores e páginas de comércio eletrônico, elaborar planejamento e execução de testes dos
-              sistemas, prestar suporte técnico, elaborar documentação técnica e pesquisar inovações tecnológicas.</p>
+            <p><em>Sistemas para Internet - Tecnólogo</em></p>
+            <p>Arquitetura e Organização de Computadores, Web Design, Projeto Integrado III, Projeto Integrado II, Interface e Usabilidade, Modelagem de Dados, Projeto Integrado I, Sistemas Operacionais, Algoritmos e Estrutura de Dados, Algoritmos e Técnicas de Programação, Redes de Computadores, Lógica e Matemática Computacional, Sociedade Brasileira e Cidadania, Desenvolvimento de Sistemas para Internet com Framework, Programação em Banco de Dados, Programação com Linguagem de Marcação, Desenvolvimento Back-End, Implementação de Projeto Web, Sistemas para Internet, Programação para Internet em Front-End, Desenvolvimento em Javascript, Desenvolvimento de E-Commerce com CMS, Linguagem Orientada a Objetos, Projeto de Extensão I - Sistemas para Internet, Projeto de Extensão II - Sistemas para Internet, Projeto de Software.</p>
           </div>
           <div class="resume-item">
             <h4>Caelum - Desenvolvimento Web</h4>
@@ -438,14 +434,7 @@
             <h4>Senac DF – Serviço Nacional de Aprendizagem Comercial</h4>
             <h5>2001 - 2003</h5>
             <p><em>Técnico em Informática</em></p>
-            <p><em>Planejar e executar a montagem de computadores, executar a instalação de hardware e software para
-                computadores, executar instalação e manutenção de redes locais de computadores, configuração e o
-                monitoramento de sistemas operacionais de redes locais-servidores, desenvolver algoritmos, banco de
-                dados, executar teste e implantação de aplicativos computacionais, executar os processos de codificação,
-                manutenção e documentação de aplicativos computacionais para desktop, executar os processos de
-                codificação, manutenção e documentação de aplicativos computacionais para internet, manipular e otimizar
-                imagens vetoriais, bitmaps gráficos e elementos visuais de navegação para web, desenvolver e organizar
-                elementos estruturais de sites.</p>
+            <p><em>Planejar e executar a montagem de computadores, Planejar e executar a instalação de hardware e software para computadores, Planejar e executar a manutenção de computadores, Projeto Integrador Assistente de Suporte em Manutenção de Computadores, Planejar e executar a instalação de redes locais de computadores, Planejar e executar a manutenção de redes locais de computadores, Planejar e executar a instalação, a configuração e o monitoramento de sistemas operacionais de redes locais (servidores), Projeto Integrador Assistente de Operação de Redes de Computadores, Desenvolver Algoritmos, Desenvolver banco de dados, Executar teste e implantação de aplicativos computacionais, Executar os processos de codificação, manutenção e documentação de aplicativos computacionais para desktop, Executar os processos de codificação, manutenção e documentação de aplicativos computacionais para internet, Manipular e otimizar imagens vetoriais, bitmaps gráficos e elementos visuais de navegação para web, Desenvolver e organizar elementos estruturais de sites, Projeto Integrador: Assistente de Desenvolvimento de Aplicativos Computacionais.</p>
           </div>
         </div><br><br>
           
