--- a/index.html
+++ b/index.html
@@ -420,14 +420,14 @@
           <div class="resume-item">
             <h4>Anhanguera Educacional - Facnet</h4>
             <h5>2007 - 2010</h5>
-            <p><em>Sistemas para Internet - Tecnólogo</em></p>
+            <p><button type="button" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#exampleModal">
+  Sistemas para Internet - Tecnólogo
+</button></p>
             <p>Arquitetura e Organização de Computadores, Web Design, Projeto Integrado III, Projeto Integrado II, Interface e Usabilidade, Modelagem de Dados, Projeto Integrado I, Sistemas Operacionais, Algoritmos e Estrutura de Dados, Algoritmos e Técnicas de Programação, Redes de Computadores, Lógica e Matemática Computacional, Sociedade Brasileira e Cidadania, Desenvolvimento de Sistemas para Internet com Framework, Programação em Banco de Dados, Programação com Linguagem de Marcação, Desenvolvimento Back-End, Implementação de Projeto Web, Sistemas para Internet, Programação para Internet em Front-End, Desenvolvimento em Javascript, Desenvolvimento de E-Commerce com CMS, Linguagem Orientada a Objetos, Projeto de Extensão I - Sistemas para Internet, Projeto de Extensão II - Sistemas para Internet, Projeto de Software.</p>
           </div>
 
           <!-- Button trigger modal -->
-<button type="button" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#exampleModal">
-  Sistemas para Internet - Tecnólogo
-</button>
+
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
